# jartsy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ExampleScenes/: CornellBox.jrts  MyDragonScene5 - Copy.jrts  MyDragonScene5.jrts  scene4HW9 - Copy.jrts  scene4HW9.jrts  scene4HW9Spheres.jrts
cmake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
src/: CMakeLists.txt  camera.h  entities.cpp  entities.h  film.h  homework.cpp  jartsy.h  jartsyla.h  lights.h  material.h  ray.h  scene.h  util.cpp
src/exportfile/: exportpgm.cpp  exportpgm.h  exportpng.cpp  exportpng.h
src/framebuffer/: framebuffer.h
src/platform/: entrycli.cpp  platform.cpp  platform.h
